mutter (3.32.0-1ubuntu2) UNRELEASED; urgency=medium

  * debian/patches/x11-Add-support-for-fractional-scaling-using-Randr.patch:
    - Don't invert the screen size when rotation is enabled (LP: #1822513)
    - Remove unneeded cleanup changes
    - Update screen size only after monitors modes have been derived
      (LP: #1822616)
    - Trigger a monitors rebuild only if scale has changed (LP: #1823485)
    - Only update UI scaling when output scaling is enabled (LP: #1822478)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 03 Apr 2019 19:19:59 -0400

mutter (3.32.0-1ubuntu1) disco; urgency=medium

  * debian/control:
    - Update VCS flags to point to launchpad
    - Update maintainer to ubuntu
  * debian/gbp.conf: update branch to point to ubuntu/master
  * debian/patches/x11-Add-support-for-fractional-scaling-using-Randr.patch:
    - X11: Add support for fractional scaling using Randr (LP: #1820850)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 27 Mar 2019 06:48:11 +0100

mutter (3.32.0-1) experimental; urgency=medium

  * New upstream release
    + Fix deadlock when cancelling a theme sound
    + Stop swizzling BGRA buffers (bye-bye inverted colors in screenshots and
      animations)
  * debian/patches/*: Update to master at
    318164779c07c12c5acfcddde7834980c7521aac. These are patches which will go
    into 3.32.1. Also refresh all other patches.
  * debian/control: Build-Depend on dbus for tests. We run the tests under
    `dbus-run-session`. Apparently whatever waas pulling this in before
    stopped doing that, so BD on it directly.

 -- Iain Lane <laney@debian.org>  Tue, 12 Mar 2019 12:45:14 +0000

mutter (3.31.92-1) experimental; urgency=medium

  * New upstream release
    + Add back support for system-wide monitor configurations
    + Add cursor-mode support to window screencasting
    + Add flag parameter to grab accelerator API
    + Add fractional scaling support
    + Consider remapped keys when guessing keycode from keysym