@@ -3,6 +3,7 @@ mutter (3.32.0-1ubuntu2) UNRELEASED; urgency=medium
   * debian/patches/x11-Add-support-for-fractional-scaling-using-Randr.patch:
     - Don't invert the screen size when rotation is enabled (LP: #1822513)
     - Remove unneeded cleanup changes
+    - Use xcb checked function to set scaling to catch errors
     - Update screen size only after monitors modes have been derived
       (LP: #1822616)
     - Trigger a monitors rebuild only if scale has changed (LP: #1823485)
